samples/_failures_safe/1761731127_c90cc2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0977dad8.c: In function ‘main’:
./samples/SAFE/__tmp_0977dad8.c:140:9: error: expected identifier at end of input
  140 |         printf("%s %s %s\n", heap_entries[i]->
      |         ^~~~~~
./samples/SAFE/__tmp_0977dad8.c:140:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0977dad8.c:140:9: error: expected declaration or statement at end of input
